wordpressPrac/custom/wordpress-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-wordpress
      protocol: HTTP
    hosts:
    - "wordpress.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpress-vs
  namespace: default
spec:
  hosts:
  - "wordpress.example.com"
  gateways:
  - wordpress-gateway
  http:
  - route:
    - destination:
        host: wordpress
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: wordpress
  namespace: default
spec:
  host: wordpress
  trafficPolicy:
    tls:
      mode: DISABLE
